<resources>
    // main screen
    <string name="app_name">CodeLab</string>
    <string name="title">Welcome to CodeLab</string>
    <string name="instruction1">Want you make an android apps ?</string>
    <string name="instruction2">No program needed, so Let\s start dig-in !</string>
    <string name="GUI1">CodeLab Assistant-tools</string>
    <string name="GUI2">Start Engineer</string>
    <string name="GUI3">Tools</string>
    // sub screen
    <string name="tut_title">CodeLab\s Assistant </string>
    <string name="tut_tx1">About : Apk auto-signer</string>
    <string name="tut_tx2">About : tools bar</string>
    <string name="tut_tx3">About : Engineer menu</string>
    <string name="tut_tx4">Column: How it works ? </string>
    <string name="opt1">main screen</string>
    <string name="opt2">Start Engineer</string>
    <string name="opt3">Tools</string>

</resources>