<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo">

    <Button
        android:id="@+id/main_screen"
        android:layout_width="103dp"
        android:layout_height="22dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#8affffff"
        android:onClick="CodeLab"
        android:text="@string/opt1"
        android:textColor="#ff000d"/>

    <Button
        android:id="@+id/Start_Engineer"
        android:layout_width="130dp"
        android:layout_height="22dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#8affffff"
        android:onClick="ThisAppIsNotDoneIt"
        android:text="@string/opt2"
        android:textColor="#ff000d"/>
    <Button
        android:id="@+id/Tools"
        android:layout_width="103dp"
        android:layout_height="22dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="#8affffff"
        android:onClick="ThisAppIsNotDoneIt"
        android:text="@string/opt3"
        android:textColor="#ff000d"/>

    <TextView
        android:id="@+id/tut_title"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:text="@string/tut_title"
        android:textColor="#00ffb2"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/tut_tx1"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="134dp"
        android:background="#44000000"
        android:text="@string/tut_tx1"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tut_tx2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="168dp"
        android:background="#44000000"
        android:text="@string/tut_tx2"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tut_tx3"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="201dp"
        android:background="#44000000"
        android:text="@string/tut_tx3"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tut_tx4"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="235dp"
        android:background="#44000000"
        android:text="@string/tut_tx4"
        android:textSize="18sp"/>

</RelativeLayout>
