<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="162dp"
        android:text="@string/title"
        android:textSize="40sp"
        android:textColor="#0015ff"/>

    <TextView
        android:id="@+id/hint1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="284dp"
        android:text="@string/instruction1"
        android:textSize="22sp"
        android:textColor="#ff0011"/>
    <TextView
        android:id="@+id/hint2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/instruction2"
        android:textSize="18sp"
        android:textColor="#ff8c00"/>

    <Button
        android:id="@+id/GUI1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="278dp"
        android:onClick="Build_a"
        android:text="@string/GUI1"
        android:textColor="#11ff00"/>
    <Button
        android:id="@+id/GUI2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp"
        android:onClick="ThisAppIsNotDoneIt"
        android:text="@string/GUI2"
        android:textColor="#11ff00"/>
    <Button
        android:id="@+id/GUI3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="191dp"
        android:onClick="ThisAppIsNotDoneIt"
        android:text="@string/GUI3"
        android:textColor="#11ff00"/>

</RelativeLayout>